--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <input type="text" id="isbn#">
     <input type="submit" id="submit">
 </form>
-<table id="bookTable">
+<table id="booktable">
     <tr>
         <th>Title</th>
         <th>Author</th>
